--- a/.werks/config
+++ b/.werks/config
@@ -3,6 +3,7 @@ editions = [
     ( "cee",          "Enterprise Edition" ),
     ( "cme",          "Managed Services Edition" ),
     ( "cce",          "Cloud Edition" ),
+    ( "cse",          "Saas Edition" ),
 ]
 
 components = [
