Type more call sites involving SearchFolder
Change-Id: If882c340dd65ee7a35a4406eefcb3aa2f471396f

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,13 @@ module = [
     "cmk.gui.mobile.views",
     "cmk.gui.views.layout",
     "cmk.gui.views.painter",
+    "cmk.gui.wato.pages.parentscan",
+    "cmk.gui.wato.pages.bulk_edit",
+    "cmk.gui.wato.pages.bulk_discovery",
+    "cmk.gui.wato.pages.folders",
+    "cmk.gui.watolib.bulk_discovery",
+    "cmk.gui.watolib.main_menu",
+    "cmk.gui.plugins.wato.utils.main_menu",
     "cmk.notification_plugins.*",
     "cmk.update_config.*",
     "cmk.utils.crypto.*",
