15831 FIX Windows agent provides cached info for local check in piggyback
Change-Id: Idec85ae4093f2cf326805801455f88b61cc1e43d

--- a/packages/neb/.vscode/settings.json
+++ b/packages/neb/.vscode/settings.json
@@ -169,9 +169,6 @@
     "c-cpp-flylint.flexelint.enable": false,
     "window.title": "${dirty}${activeEditorShort}${separator}LIVESTATUS${separator}",
     "workbench.colorCustomizations": {
-        "[Atom One Light]": {},
-        "activityBar.background": "#3D2A0F",
-        "titleBar.activeBackground": "#563B15",
-        "titleBar.activeForeground": "#FDFAF6"
+        "[Atom One Light]": {}
     }
 }
