Add Ubuntu 23.04 Lunar Lobster distribution configuration
CMK-13964

Change-Id: I6cf34372c80d0ad1c75e73aca43b42a57cdf2104

--- a/editions.yml
+++ b/editions.yml
@@ -6,6 +6,7 @@ common: &common
     - "ubuntu-20.04"
     - "ubuntu-22.04"
     - "ubuntu-22.10"
+    - "ubuntu-23.04"
     - "centos-7"
     - "centos-8"
     - "almalinux-9"
