Unify run scripts a bit more.
Change-Id: I84adc5f4d737e3d84768a178b28cfbf0e99d50e5

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -287,6 +287,8 @@ target_compile_features(livestatus PUBLIC cxx_std_17)
 set_target_properties(livestatus PROPERTIES VERSION ${PROJECT_VERSION}
                                             SOVERSION ${PROJECT_VERSION_MAJOR})
 
+add_custom_target(build DEPENDS livestatus)
+
 # Black Magic for IDE:
 source_group(
   TREE "${PROJECT_SOURCE_DIR}/include"
