--- a/packages/unixcat/src/CMakeLists.txt
+++ b/packages/unixcat/src/CMakeLists.txt
@@ -9,3 +9,5 @@ target_include_directories(unixcat PRIVATE ${lib_livestatus_include})
 target_link_libraries(unixcat PRIVATE pthread)
 
 target_compile_features(unixcat PUBLIC cxx_std_17)
+
+add_custom_target(build DEPENDS unixcat)
