Unification: Grab package description from CMakeLists.txt.
Change-Id: Ic3fa0dc4dc92743332b2f60200a25cdd22eb6875

--- a/packages/neb/CMakeLists.txt
+++ b/packages/neb/CMakeLists.txt
@@ -17,7 +17,7 @@ add_compile_options(
 project(
   neb
   VERSION 1.0
-  DESCRIPTION "neb"
+  DESCRIPTION "Livestatus NEB"
   LANGUAGES CXX)
 
 # SUB-DIRS:
