Name Debian 12 the same way as other Debian images
Replace the codeword with the numeric version

Change-Id: I5ad810aecfb00c87c07b43793d5bbfcab346635a

--- a/buildscripts/docker_image_aliases/IMAGE_DEBIAN_12/meta.yml
+++ b/buildscripts/docker_image_aliases/IMAGE_DEBIAN_12/meta.yml
@@ -1,2 +1,2 @@
-source: debian:bookworm
-tag: artifacts.lan.tribe29.com:4000/debian:bookworm-image-alias-master-ffa6b0b646d
+source: debian:12
+tag: artifacts.lan.tribe29.com:4000/debian:12-image-alias-2.1.0-b3d96bcc770
