--- a/Pipfile
+++ b/Pipfile
@@ -186,12 +186,12 @@ protobuf = "==3.20.1"  # For development, Runtime modules are shipped by omd/pac
 semver = "==3.0.0"
 agent-receiver = {editable = true, path = "./agent-receiver"}
 pysmb = "==1.2.9.1"  # used by SMB share special agent
-google-cloud-monitoring = "==2.11.1"  # used by the gcp special agent
-google-cloud-asset = "==3.14.0"  # used by the gcp special agent
+google-cloud-monitoring = "~=2.11"  # used by the gcp special agent
+google-cloud-asset = "~=3.14"  # used by the gcp special agent
 exchangelib = "==4.9.0"  # used by active checks for mail
 lxml = "==4.9.2"  # used via beautifulsoup4 as a parser and in the agent_netapp special agent
 grpcio = "==1.51.3"
-google-api-python-client = "==2.83.0"  # use rest api to query big query for gcp cost monitoring
+google-api-python-client = "~=2.83"  # use rest api to query big query for gcp cost monitoring
 setproctitle = "==1.3.2"  # used by mkbench/dcd/liveproxyd
 black = {version = "==23.3.0", extras = ["d"]}  # used in our CI, the LSP-integration and in the OpenAPI part, "d" for broken black packaging only, see https://github.com/psf/black/issues/690
 meraki = "==1.30.0"  # used by special agent Cisco Meraki
