Fix missing py_import_cycles output processing
The relevant information regarding the detected cycles are written to
stderr which was previously not written to results/py-import-cycles.txt
in our gerrit test job.

Change-Id: I577e0c913ad14444900c5bb60037654f26f0e3e3

--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -162,7 +162,7 @@ STAGES:
     - NAME: 'Python Cyclic Dependencies'
       ONLY_WHEN_NOT_EMPTY: CHANGED_IMAGE_TESTING,CHANGED_TESTS_MAKEFILE,CHANGED_PIPFILE_LOCK,CHANGED_PYTHON_FILES
       DIR: 'tests'
-      COMMAND: 'make test-cycles-docker > ${RESULTS}/py-import-cycles.txt'
+      COMMAND: 'make test-cycles-docker &> ${RESULTS}/py-import-cycles.txt'
       TEXT_ON_SKIP: 'No Python files changed'
       RESULT_CHECK_FILE_PATTERN: "results/py-import-cycles.txt"
 
