--- a/tests/plugins_integration/regexp.yaml
+++ b/tests/plugins_integration/regexp.yaml
@@ -1,83 +1,13 @@
 '.*':
   plugin_output: >-2
     Crash-ID: [A-Za-z0-9]{8}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{12}
-'.*\.Check_MK':
+'.*\.CPU_utilization':
   plugin_output: >-2
-    execution time [0-9]+\.[0-9]+ sec
-'.*\.Check_MK_Agent':
-  plugin_output: >-2
-    Time since last update check: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+\(
-'.*\.Check_MK_Discovery':
-  plugin_output: >-2
-    (All services up to date|Services: all up to date),
-    (All host labels up to date|Host labels: all up to date)(,
-    Parsing of section oracle_[^ ]+ failed[^,]*)*
+    ^Total CPU: [0-9]+(\.[0-9]+)?%$
 '.*\.CPU_load':
   plugin_output: >-2
     ^15 min load: [0-9]+(\.[0-9]+)?,
     15 min load per core: [0-9]+(\.[0-9]+)? \([0-9]+ cores\)$
-'.*\.CPU_utilization':
-  plugin_output: >-2
-    ^Total CPU: [0-9]+(\.[0-9]+)?%$
-'.*\.Disk_IO_SUMMARY':
-  plugin_output: >-2
-    Read: [0-9]+(\.[0-9]+)? [kmgtpezyKMGTPEZY]?B/s,
-    Write: [0-9]+(\.[0-9]+)? [kmgtpezyKMGTPEZY]?B/s,
-    Latency: [0-9]+ microseconds
-'.*\.Heartbeat_CRM_General':
-  plugin_output: >-2
-    ([0-9]+ (year|month|day|hour|minute|second)s? ?)+
-'.*\.Kernel_Performance':
-  plugin_output: >-2
-    ^Process Creations: [0-9]+(\.[0-9]+)?/s,
-    Context Switches: [0-9]+(\.[0-9]+)?/s,
-    Major Page Faults: [0-9]+(\.[0-9]+)?/s,
-    Page Swap in: [0-9]+(\.[0-9]+)?/s,
-    Page Swap Out: [0-9]+(\.[0-9]+)?/s$
-'.*\.Log_#var#adm#messages':
-  plugin_output: >-2
-    [0-9]+ CRIT messages? \(Last worst: "[A-Z][a-z]+ [0-9]+ [0-9]{2}:[0-9]{2}:[0-9]{2}
-    [A-Za-z0-9]+ amf_mk_agent\[[0-9]+\]: \[ID [0-9]+ daemon.info\]
-    connect from [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}"\)
-'.*\.Memory':
-  plugin_output: >-2
-    Total virtual memory: [0-9]+(\.[0-9]+)?%
-    - [0-9]+(\.[0-9]+)? ([KMGTPEZY]i)?B of [0-9]+(\.[0-9]+)? ([KMGTPEZY]i)?B,
-    [0-9]+ additional details? available
-'.*\.NTP_Time':
-  plugin_output: >-2
-    Offset: -?[0-9]+(\.[0-9]+) m?s,
-    Stratum: [0-9]+(\.[0-9]+)?,
-    Time since last sync: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+.*
-'.*\.Number_of_threads':
-  plugin_output: >-2
-    [0-9]+( \(warn/crit at [0-9]+/[0-9]+\)(\(!+\))?)?, Usage: [0-9]+(\.[0-9]+)?%
-'.*\.OMD_SITE_apache':
-  plugin_output: >-2
-    Requests: [0-9]+(\.[0-9]+)?/s,
-    Seconds serving: [0-9]+(\.[0-9]+)?/s,
-    Sent: [0-9]+(\.[0-9]+)? [kmgtpezyKMGTPEZY]?B/s
-'.*\.OMD_SITE_performance':
-  plugin_output: >-2
-    Livestatus version: [0-9]{4}\.[0-9]{2}\.[0-9]{2},
-    Host checks: [0-9]+(\.[0-9]+)?/s,
-    Service checks: [0-9]+(\.[0-9]+)?/s
-'.*\.PING':
-  plugin_output: >-2
-    OK - [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}: rta [0-9]+(.[0-9]+)?ms, lost [0-9]+%
-'.*\.SAP_Process_.*':
-  plugin_output: >-2
-    Status: Running, Start Time: [A-Z][a-z]{2} [A-Z][a-z]{2} [0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2} [0-9]{4},
-    Elapsed Time: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+
-'.*\.Site_SITE_statistics':
-  plugin_output: >-2
-    Total hosts: [0-9]+,
-    Problem hosts: [0-9]+,
-    Total services: [0-9]+,
-    Problem services: [0-9]+
-'.*\.System_Time':
-  plugin_output: >-2
-    ^Offset: (-?[0-9]+ (year|month|day|hour|minute|second)s? ?)+\(warn/crit below -30 seconds/-1 minute 0 seconds\)
 '.*\.Systemd_Timesyncd_Time':
   plugin_output: >-2
     Offset: -?[0-9]+ (micro|milli)?seconds?,
@@ -89,9 +19,75 @@
 '.*\.TCP_Connections':
   plugin_output: >-2
     ^Established: [0-9]+$
+'.*\.Check_MK':
+  plugin_output: >-2
+    execution time [0-9]+\.[0-9]+ sec
+'.*\.Check_MK_Agent':
+  plugin_output: >-2
+    Time since last update check: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+\(
+'.*\.Check_MK_Discovery':
+  plugin_output: >-2
+    (All services up to date|Services: all up to date),
+    (All host labels up to date|Host labels: all up to date)(,
+    Parsing of section oracle_[^ ]+ failed[^,]*)*
+'.*\.Kernel_Performance':
+  plugin_output: >-2
+    ^Process Creations: [0-9]+(\.[0-9]+)?/s,
+    Context Switches: [0-9]+(\.[0-9]+)?/s,
+    Major Page Faults: [0-9]+(\.[0-9]+)?/s,
+    Page Swap in: [0-9]+(\.[0-9]+)?/s,
+    Page Swap Out: [0-9]+(\.[0-9]+)?/s$
+'.*\.Site_SITE_statistics':
+  plugin_output: >-2
+    Total hosts: [0-9]+,
+    Problem hosts: [0-9]+,
+    Total services: [0-9]+,
+    Problem services: [0-9]+
 '.*[_.]Uptime':
   plugin_output: >-2
-    ^.*[Uu]ptime: ([0-9]+ (year|month|day|hour|minute|second)s?,? ?)*([0-9]{1,2}:[0-9]{2}:[0-9]{2})?
+    Up since ([A-Z][a-z]+ [0-9]{2} [0-9]{4}|[0-9]{4}-[0-9]{2}-[0-9]{2}) [0-9]{2}:[0-9]{2}:[0-9]{2},
+    [Uu]ptime: ([0-9]+ (year|month|day|hour|minute|second)s?,? ?)*([0-9]{1,2}:[0-9]{2}:[0-9]{2})?
+'.*\.Disk_IO_SUMMARY':
+  plugin_output: >-2
+    Read: [0-9]+(\.[0-9]+)? [kmgtpezyKMGTPEZY]?B/s,
+    Write: [0-9]+(\.[0-9]+)? [kmgtpezyKMGTPEZY]?B/s,
+    Latency: [0-9]+ microseconds
+'.*\.Number_of_threads':
+  plugin_output: >-2
+    [0-9]+( \(warn/crit at [0-9]+/[0-9]+\)(\(!+\))?)?, Usage: [0-9]+(\.[0-9]+)?%
+'.*\.Memory':
+  plugin_output: >-2
+    Total virtual memory: [0-9]+(\.[0-9]+)?%
+    - [0-9]+(\.[0-9]+)? ([KMGTPEZY]i)?B of [0-9]+(\.[0-9]+)? ([KMGTPEZY]i)?B,
+    [0-9]+ additional details? available
+'.*\.OMD_SITE_performance':
+  plugin_output: >-2
+    Livestatus version: [0-9]{4}\.[0-9]{2}\.[0-9]{2},
+    Host checks: [0-9]+(\.[0-9]+)?/s,
+    Service checks: [0-9]+(\.[0-9]+)?/s
+'.*\.PING':
+  plugin_output: >-2
+    OK - [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}: rta [0-9]+(.[0-9]+)?ms, lost [0-9]+%
+'.*\.Log_#var#adm#messages':
+  plugin_output: >-2
+    [0-9]+ CRIT messages? \(Last worst: "[A-Z][a-z]+ [0-9]+ [0-9]{2}:[0-9]{2}:[0-9]{2}
+    [A-Za-z0-9]+ amf_mk_agent\[[0-9]+\]: \[ID [0-9]+ daemon.info\]
+    connect from [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}"\)
+'.*\.NTP_Time':
+  plugin_output: >-2
+    Offset: -?[0-9]+(\.[0-9]+) m?s,
+    Stratum: [0-9]+(\.[0-9]+)?,
+    Time since last sync: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+.*
+'.*\.Heartbeat_CRM_General':
+  plugin_output: >-2
+    ([0-9]+ (year|month|day|hour|minute|second)s? ?)+
+'.*\.System_Time':
+  plugin_output: >-2
+    ^Offset: (-?[0-9]+ (year|month|day|hour|minute|second)s? ?)+\(warn/crit below -30 seconds/-1 minute 0 seconds\)
+'.*\.SAP_Process_.*':
+  plugin_output: >-2
+    Status: Running, Start Time: [A-Z][a-z]{2} [A-Z][a-z]{2} [0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2} [0-9]{4},
+    Elapsed Time: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+
 '.*\.VEEAM_Client_.*':
   plugin_output: >-2
     Status: Success, Size \(total\): 7.21 TiB,
