Add localization for future metrics API
CMK-14042

Change-Id: I9530d85c6922c24c09de3c2b2260330be36e8107

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -20,6 +20,7 @@ PYTEST_UNIT_TEST_OPTS = \
     ../cmk/special_agents \
     ../cmk/update_config \
     ../cmk/utils \
+    ../cmk_metrics \
     ../agent-receiver \
     ../omd/packages/omd \
 	../cmk/active_checks \
